Safe, please see the accompanying README.txt file. For more
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to previous
releases may be found in the file ChangeLog.txt.

New Features for 3.06
=====================
Support for U3 (disk-on-key).

Changes to Existing Features in 3.06
====================================
File opened in initial dialog now added to recent files list.

Bugs fixed in 3.06
==================
[1625557] No longer crashes when invoking help after using Hot-Key.
[1633516] No longer crashes upon Find with an empty group.
[] Configuration handled correctly with non-English user or host
names.
[] No longer crashes when password history policy changes records.
[] Non-English data issues resolved.

New Features for 3.05.02
========================
None.

Changes to Existing Features in 3.05.02
=======================================
File opened in initial dialog now added to recent files list.

Bugs fixed in 3.05.02
=====================
[1606265, 1609291] No longer terminates after edit when username
and/or hostname starts with a digit.
[1609759] "Show Password in display list & tree" setting now
persistent across application exit.
[1608191] Tree view's state is now preserved across timed lock and
when starting with '-s' flag.
[1612881, 1577505] Notes now appear consistently.


New Features for 3.05
=====================
[1452303] Support multiple automatic backups
[1504327, 1600626] Portable (e.g., USB stick) installation supported
(configuration information stored in .cfg file instead of registry).
[1452303, 1303548, 912724] Option to start Password Safe minimized at login
[1600626] Ability to specify alternate browser for URLs - useful if
Firefox is your default browser, but you need to access a site that
only works with IE, for example.

Changes to Existing Features in 3.05
====================================