@@ -142,7 +142,7 @@ BEGIN
     IDD_PASSKEYSETUP, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 216
+        RIGHTMARGIN, 281
         TOPMARGIN, 7
         BOTTOMMARGIN, 114
     END
@@ -444,19 +444,19 @@ BEGIN
     PUSHBUTTON      "&Help",ID_HELP,209,116,50,19,WS_GROUP
 END
 
-IDD_PASSKEYSETUP DIALOGEX 0, 0, 223, 121
+IDD_PASSKEYSETUP DIALOGEX 0, 0, 288, 121
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Safe Combination Setup"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    LTEXT           "A new password database will be created. The safe combination you enter will be used to encrypt the password database file. The Safe Combination can use any keyboard character and is case-sensitive.",IDC_STATIC,7,7,209,33
+    LTEXT           "A new password database will be created. The safe combination you enter will be used to encrypt the password database file. The Safe Combination can use any keyboard character and is case-sensitive.",IDC_STATIC,7,7,274,33
     RTEXT           "Safe Combination:",IDC_STATIC,7,55,90,8
-    EDITTEXT        IDC_PASSKEY,101,53,88,14,ES_PASSWORD | ES_AUTOHSCROLL
+    EDITTEXT        IDC_PASSKEY,101,53,180,14,ES_PASSWORD | ES_AUTOHSCROLL
     RTEXT           "Verify:",IDC_STATIC,7,72,90,8
-    EDITTEXT        IDC_VERIFY,101,69,88,14,ES_PASSWORD | ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,33,100,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,86,100,50,14
-    PUSHBUTTON      "&Help",ID_HELP,139,100,50,14
+    EDITTEXT        IDC_VERIFY,101,69,180,14,ES_PASSWORD | ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,7,100,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,118,100,50,14
+    PUSHBUTTON      "&Help",ID_HELP,231,100,50,14
 END
 
 IDD_PASSWORDSAFE_DIALOG DIALOGEX 0, 0, 292, 206
@@ -619,7 +619,7 @@ BEGIN
     CONTROL         "&Don't ask me again",IDC_QUERYCHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,44,65,134,10
 END
 
-IDD_PASSKEYENTRY DIALOGEX 0, 0, 261, 85
+IDD_PASSKEYENTRY DIALOGEX 0, 0, 283, 86
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Safe Combination Entry"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -628,11 +628,11 @@ BEGIN
     LTEXT           "Please enter the safe combination for this password database.",IDC_STATIC,48,10,196,8
     LTEXT           "Name. Name. Name.",IDC_MESSAGE,48,20,196,8,SS_NOPREFIX
     LTEXT           "Safe Combination:",IDC_STATIC,48,34,45,18
-    EDITTEXT        IDC_PASSKEY,96,36,147,14,ES_PASSWORD | ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,52,60,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,105,60,50,14
-    PUSHBUTTON      "&Help",ID_HELP,158,60,50,14
-    CONTROL         "R-O",IDC_READONLY,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_DISABLED,214,62,29,10
+    EDITTEXT        IDC_PASSKEY,96,36,180,14,ES_PASSWORD | ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,45,60,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,98,60,50,14
+    PUSHBUTTON      "&Help",ID_HELP,151,60,50,14
+    CONTROL         "R-O",IDC_READONLY,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_DISABLED,207,62,29,10
 END
 
 IDD_FIND DIALOGEX 0, 0, 258, 117
@@ -650,16 +650,16 @@ BEGIN
     EDITTEXT        IDC_STATUS,38,76,207,14,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
 END
 
-IDD_PASSKEYENTRY_WITHEXIT DIALOGEX 0, 0, 261, 85
+IDD_PASSKEYENTRY_WITHEXIT DIALOGEX 0, 0, 283, 86
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Safe Combination Entry"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     CONTROL         189,IDC_STATIC_LOGO,"Static",SS_BITMAP,7,14,32,30
-    LTEXT           "Please enter the safe combination for this password database.",IDC_STATIC,48,10,213,8
+    LTEXT           "Please enter the safe combination for this password database.",IDC_STATIC,70,10,213,8
     LTEXT           "Name. Name. Name.",IDC_MESSAGE,48,20,196,8,SS_NOPREFIX
     LTEXT           "Safe Combination:",IDC_STATIC,48,34,45,18
-    EDITTEXT        IDC_PASSKEY,96,36,147,14,ES_PASSWORD | ES_AUTOHSCROLL
+    EDITTEXT        IDC_PASSKEY,96,36,180,14,ES_PASSWORD | ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,54,60,32,14
     PUSHBUTTON      "Cancel",IDCANCEL,95,60,32,14
     PUSHBUTTON      "Exit",IDC_EXIT,136,60,32,14
