@@ -247,8 +247,8 @@ BEGIN
     IDS_VERSIONWARNING      "File version warning"
     IDS_CANTOPENWRITING     "%s\n\nCould not open file for writing!"
     IDS_FILEWRITEERROR      "File Write Error"
-    IDS_NEWNAME1            "Please Choose a Name for the Current (Untitled) Database:"
-    IDS_NEWNAME2            "Please Choose a New Name for the Current Database:"
+    IDS_NEWNAME1            "Please choose a name for the current (Untitled) database:"
+    IDS_NEWNAME2            "Please choose a new name for the current database:"
     IDS_FILEISLOCKED        "%s\n\nFile is currently locked by %s"
     IDS_FILELOCKERROR       "File lock error"
     IDS_NAMEEXPORTFILE      "Please name the exported database"
@@ -262,6 +262,7 @@ BEGIN
     IDS_RECORDSNOTREAD      "\nCouldn't read %d record%s"
     IDS_PICKKEEPASSFILE     "Please Choose a KeePass Text File to Import"
     IDS_MISSINGXSD          "Unable to find required XML Schema Definition file (pwsafe.xsd) in your PasswordSafe Application Directory.  Please copy it from your installation file."
+    IDS_CREATENAME          "Please choose a name for the new database"
 END
 
 STRINGTABLE
