@@ -14,6 +14,7 @@ Support for U3 (disk-on-key).
 
 Changes to Existing Features in 3.06
 ====================================
+Opening dialog now shows recently opened databases in dropdown list.
 File opened in initial dialog now added to recent files list.
 
 Bugs fixed in 3.06
